Fix tagline alignment.

--- a/style/main.css
+++ b/style/main.css
@@ -27,6 +27,7 @@ header pre {
     font-size:24px;
     line-height:1.5em;
     margin-top:175px;
+    padding:0px;
     /* text-shadow:0px 0px 5px #666666; */
 }
 
